<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/colorPrimary"
    tools:context=".main.activities.ChecagemLogin_Activity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorPrimary"
        android:paddingBottom="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvMensagem"
            android:layout_width="379dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:text="@string/bem_vindo"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textColorLink="#FFFFFF"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edT_Login"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:autofillHints="name"
            android:background="@color/colorPrimaryDark"
            android:ems="10"
            android:hint="@string/login"
            android:inputType="textPersonName"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textAlignment="textStart"
            android:textColor="@android:color/black"
            android:textColorHint="#A1887F"
            android:textColorLink="#FFFFFF"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvMensagem" />

        <EditText
            android:id="@+id/edt_Pass"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:autofillHints="password"
            android:background="@color/colorPrimaryDark"
            android:ems="10"
            android:hint="@string/senha"
            android:inputType="textPassword"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textAlignment="textStart"
            android:textColor="@android:color/black"
            android:textColorHint="#A1887F"
            android:textColorLink="#FFFFFF"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edT_Login" />

        <Button
            android:id="@+id/btLogar"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:background="#002171"
            android:text="@string/entrar"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_Pass" />

        <Button
            android:id="@+id/btNovo"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/novo"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btLogar" />

        <TextView
            android:id="@+id/tvEsqueceuSenha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:autoLink="all"
            android:linksClickable="false"
            android:selectAllOnFocus="false"
            android:text="@string/esqueceu_a_senha"
            android:textColor="@color/colorPrimaryDark"
            android:textColorLink="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btNovo" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>