<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".main.activities.PerfilUsuario_Activity">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bnv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/activity_main_bottom_actions" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorPrimary"
        android:paddingBottom="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvMensagem"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Editar perfil"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textColorLink="#FFFFFF"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edT_Login2"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:background="@color/colorPrimaryDark"
            android:ems="10"
            android:hint="@string/login"
            android:inputType="textPersonName"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textAlignment="textStart"
            android:textColor="@android:color/black"
            android:textColorHint="#A1887F"
            android:textColorLink="#FFFFFF"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.563"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtNome" />

        <EditText
            android:id="@+id/edt_Pass2"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:background="#FFFFFF"
            android:ems="10"
            android:hint="@string/senha"
            android:inputType="textPassword"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textAlignment="textStart"
            android:textColor="@android:color/black"
            android:textColorHint="#A1887F"
            android:textColorLink="#FFFFFF"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.563"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edT_Login2" />

        <Button
            android:id="@+id/btCriar"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:background="@color/colorAccent"
            android:text="@string/modificar"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.563"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/swLogado" />

        <EditText
            android:id="@+id/edtNome"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:background="#FFFFFF"
            android:ems="10"
            android:hint="@string/nome"
            android:inputType="textPersonName"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textAlignment="textStart"
            android:textColor="@android:color/black"
            android:textColorHint="#A1887F"
            android:textColorLink="#FFFFFF"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.563"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvMensagem" />

        <Switch
            android:id="@+id/swLogado"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:showText="false"
            android:text="Manter Logado?"
            android:textColor="@color/colorPrimaryDark"
            android:textOff="Não"
            android:textOn="Sim"
            android:textSize="24sp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="@+id/edEmail"
            app:layout_constraintTop_toBottomOf="@+id/edEmail" />

        <EditText
            android:id="@+id/edEmail"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:background="@color/colorPrimaryDark"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textAlignment="textStart"
            android:textColor="@android:color/black"
            android:textColorHint="#A1887F"
            android:textColorLink="#FFFFFF"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.563"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_Pass2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

